@@ -549,6 +549,24 @@ Regex-based customization of migrated template names:
 - Additional details about the name regex syntax are provided in the "Migrate task template name manipulation" section.
 
 
+    % sdwan --verbose migrate all sastre_cx_golden_repo_201 --workdir sastre_cx_golden_repo --name "{name (G_.+)_184_.+}{name (G_VPN.+)}_201{name G.+_184(_.+)}" 
+    INFO: Starting migrate: Local workdir: "sastre_cx_golden_repo" 18.4 -> 20.1 Local output dir: "sastre_cx_golden_repo_201"
+    INFO: Loaded template migration recipes
+    INFO: Inspecting policy_list items
+    <snip>
+    INFO: Inspecting template_feature items
+    INFO: Saved feature template index
+    INFO: Saved feature template G_vEdge_201_Banner_Template_v01
+    INFO: Saved feature template G_vEdge_184_Banner_Template_v01
+    INFO: Saved feature template G_vEdge_184_SLAN_INT3_v01
+    INFO: Saved feature template G_vEdge_184_VPN0_Transport5_TLOC_EXT_v01
+    INFO: Saved feature template G_cEdge_201_Loopback0_Template_v01
+    INFO: Saved feature template G_cEdge_184_Loopback0_Template_v01
+    <snip>
+    INFO: Saved device template G_Branch_201_Dual_cE4321_2xWAN_TLOC_L2_v01
+    INFO: Saved device template G_Branch_201_Single_cE4451-X_2xWAN_DHCP_L2_v01
+    INFO: Task completed successfully
+
 ## Notes
 
 ### Regular Expressions
@@ -565,10 +583,19 @@ The regular expression syntax supported is described in https://docs.python.org/
 
 ### Migrate task template name manipulation
 
-- The --name format specification can contain multiple occurrences of {name}. Each occurrence can contain a regular expression with one or more capturing groups. These capturing groups define the segments of the original name to "copy". Segments matching each capturing group are concatenated and "pasted" to the {name} position.
-- Consider the template name "BranchType1Template-CSR". In order to get the migrated name as "BranchType1Template_201_CSR", one can use --name "{name ([^-]+)-CSR}_201_{name [^-]+-(CSR)}".
-- If name regex does not match, {name <regex>} is replaced by an empty string.
+- The --name format specification can contain multiple occurrences of {name}. Each occurrence may contain a regular expression separated by a space: {name &lt;regex&gt;}. The regular expressions must contain one or more capturing groups, which define the segments of the original name to "copy". Segments matching each capturing group are concatenated and "pasted" to the {name} position.
+- If name regex does not match, {name &lt;regex&gt;} is replaced with an empty string.
+- Consider the template name "G_Branch_184_Single_cE4451-X_2xWAN_DHCP_L2_v01". In order to get the migrated name as "G_Branch_201_Single_cE4451-X_2xWAN_DHCP_L2_v01", one can use --name "{name (G_.+)_184_.+}_201_{name G.+_184_(.+)}".
+- A transform option under the list task allows one to verify of the effect of a name-regex (e.g. as used by the --name format specification in the migrate task).
 
+
+    % sdwan list transform template_device --regex "G_Branch_184_Single_cE4451" --workdir sastre_cx_golden_repo "{name (G_.+)_184_.+}_201_{name G.+_184_(.+)}"
+    +---------------------------------------------------------------+---------------------------------------------------------------+-----------------+-----------------+
+    | Name                                                          | Transformed                                                   | Tag             | Type            |
+    +---------------------------------------------------------------+---------------------------------------------------------------+-----------------+-----------------+
+    | G_Branch_184_Single_cE4451-X_2xWAN_Static_2xSLAN_Trunk_L2_v01 | G_Branch_201_Single_cE4451-X_2xWAN_Static_2xSLAN_Trunk_L2_v01 | template_device | device template |
+    | G_Branch_184_Single_cE4451-X_2xWAN_DHCP_L2_v01                | G_Branch_201_Single_cE4451-X_2xWAN_DHCP_L2_v01                | template_device | device template |
+    +---------------------------------------------------------------+---------------------------------------------------------------+-----------------+-----------------+
 
 ### Logs
 
