@@ -558,9 +558,9 @@ class TaskList(Task):
                                  help='Regular expression selecting devices to list. Match on hostname or '
                                       'chassis/uuid. Use "^-$" to match devices without a hostname.')
 
-        xform_parser = sub_tasks.add_parser('name-transform', aliases=['transform'],
-                                            help='List name transformations performed by the provided name-regex '
-                                                 'against existing item names.')
+        xform_parser = sub_tasks.add_parser('transform',
+                                            help='List name transformations performed by a name-regex against '
+                                                 'existing item names.')
         xform_parser.set_defaults(table_factory=TaskList.xform_table)
         xform_parser.add_argument('tags', metavar='<tag>', nargs='+', type=TagOptions.tag,
                                   help='One or more tags for selecting groups of items. Multiple tags should be '
@@ -572,6 +572,8 @@ class TaskList(Task):
                                        'name can be selected using the {name <regex>} format. Where <regex> is a '
                                        'regular expression that must contain at least one capturing group. Capturing '
                                        'groups identify sections of the original name to keep.')
+        xform_parser.add_argument('--regex', metavar='<regex>', type=regex_type,
+                                  help='Regular expression selecting items to list. Match on original item names')
 
         # Parameters common to all sub-tasks
         for sub_task in (config_parser, cert_parser, xform_parser):
@@ -659,8 +661,9 @@ class TaskList(Task):
             (item_name,  name_regex(item_name), tag, info)
             for tag, info, index, item_cls in cls.index_iter(backend, catalog_iter(*parsed_args.tags, version=version))
             for item_id, item_name in index
+            if parsed_args.regex is None or regex_search(parsed_args.regex, item_name)
         )
-        results = Table('Name', 'Translated', 'Tag', 'Type')
+        results = Table('Name', 'Transformed', 'Tag', 'Type')
         results.extend(matched_item_iter)
 
         return results
@@ -880,7 +883,7 @@ class TaskMigrate(Task):
                                 is_bad_name = True
                                 raise StopProcessorException()
                             if new_name in name_set:
-                                cls.log_error('New %s name for %s conflicts with: %s', info, item_name, new_name)
+                                cls.log_error('New %s name collision: %s -> %s', info, item_name, new_name)
                                 is_bad_name = True
                                 raise StopProcessorException()
 
